--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,14 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__hash_table": "cpp",
+        "__node_handle": "cpp",
+        "__tree": "cpp",
+        "codecvt": "cpp",
+        "map": "cpp",
+        "optional": "cpp",
+        "set": "cpp",
+        "unordered_map": "cpp"
     }
 }
